added photos for winter bushwhack

--- a/photos.html
+++ b/photos.html
@@ -38,6 +38,51 @@
     <section class="title">
         <h2 class="section-title">Photos</h2>
     </section>
+    <section class="photo-title">
+        <h3>Winter Bushwhack 2022</h3>
+    </section>
+    <section class="container">
+        <div class="gallery">
+            <a target="_blank" href="./assets/images/WB2.JPG">
+                <img src="./assets/images/WB2.JPG" alt="fallen soldier" width="600" height="400">
+            </a>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="./assets/images/WB1.JPG">
+                <img src="./assets/images/WB1.JPG" alt="fallen soldier" width="600" height="400">
+            </a>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="./assets/images/WB3.JPG">
+                <img src="./assets/images/WB3.JPG" alt="fallen soldier" width="600" height="400">
+            </a>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="./assets/images/WB4.JPG">
+                <img src="./assets/images/WB4.JPG" alt="fallen soldier" width="600" height="400">
+            </a>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="./assets/images/WB5.JPG">
+                <img src="./assets/images/WB5.JPG" alt="fallen soldier" width="600" height="400">
+            </a>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="./assets/images/WB6.JPG">
+                <img src="./assets/images/WB6.JPG" alt="fallen soldier" width="600" height="400">
+            </a>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="./assets/images/WB7.JPG">
+                <img src="./assets/images/WB7.JPG" alt="fallen soldier" width="600" height="400">
+            </a>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="./assets/images/falls.jpg">
+                <img src="./assets/images/falls.jpg" alt="fallen soldier" width="600" height="400">
+            </a>
+        </div>
+    </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
