added modal and RLFA photos

--- a/photos.html
+++ b/photos.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/photos-style.css">
+    <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" 
+    crossorigin="anonymous"></script>
     <title>Photos</title>
 </head>
 <body>
@@ -41,50 +43,107 @@
     <section class="photo-title">
         <h3>Winter Bushwhack 2022</h3>
     </section>
-    <section class="container">
+    <section class="main">
         <div class="gallery">
-            <a target="_blank" href="./assets/images/WB2.JPG">
-                <img src="./assets/images/WB2.JPG" alt="fallen soldier" width="600" height="400">
-            </a>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/WB2.JPG" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/WB1.JPG" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/WB3.JPG" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/WB4.JPG" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/WB5.JPG" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/WB6.JPG" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/WB7.JPG" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/falls.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
         </div>
+    </section>
+    <section class="photo-title">
+        <h3>Real Life First Aid 2022</h3>
+    </section>
+    <section class="main">
         <div class="gallery">
-            <a target="_blank" href="./assets/images/WB1.JPG">
-                <img src="./assets/images/WB1.JPG" alt="fallen soldier" width="600" height="400">
-            </a>
-        </div>
-        <div class="gallery">
-            <a target="_blank" href="./assets/images/WB3.JPG">
-                <img src="./assets/images/WB3.JPG" alt="fallen soldier" width="600" height="400">
-            </a>
-        </div>
-        <div class="gallery">
-            <a target="_blank" href="./assets/images/WB4.JPG">
-                <img src="./assets/images/WB4.JPG" alt="fallen soldier" width="600" height="400">
-            </a>
-        </div>
-        <div class="gallery">
-            <a target="_blank" href="./assets/images/WB5.JPG">
-                <img src="./assets/images/WB5.JPG" alt="fallen soldier" width="600" height="400">
-            </a>
-        </div>
-        <div class="gallery">
-            <a target="_blank" href="./assets/images/WB6.JPG">
-                <img src="./assets/images/WB6.JPG" alt="fallen soldier" width="600" height="400">
-            </a>
-        </div>
-        <div class="gallery">
-            <a target="_blank" href="./assets/images/WB7.JPG">
-                <img src="./assets/images/WB7.JPG" alt="fallen soldier" width="600" height="400">
-            </a>
-        </div>
-        <div class="gallery">
-            <a target="_blank" href="./assets/images/falls.jpg">
-                <img src="./assets/images/falls.jpg" alt="fallen soldier" width="600" height="400">
-            </a>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA1.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA2.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA3.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA4.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA5.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA6.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA7.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA8.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA9.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA10.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA11.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA12.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA13.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA14.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA15.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA16.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA17.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA18.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA19.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA20.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/RLFA21.jpg" alt="fallen soldier" width="600" height="400">
+            </div>
         </div>
     </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
+    <script src="./assets/js/photos.js"></script>
 </body>
 </html>
