--- a/photos.html
+++ b/photos.html
@@ -46,28 +46,28 @@
     <section class="main">
         <div class="gallery">
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB2.JPG" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/WB22/WB2.JPG" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB1.JPG" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/WB22/WB1.JPG" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB3.JPG" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/WB22/WB3.JPG" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB4.JPG" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/WB22/WB4.JPG" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB5.JPG" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/WB22/WB5.JPG" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB6.JPG" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/WB22/WB6.JPG" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB7.JPG" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/WB22/WB7.JPG" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/falls.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/WB22/falls.jpg" alt="" width="600" height="400">
             </div>
         </div>
     </section>
@@ -77,67 +77,113 @@
     <section class="main">
         <div class="gallery">
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA1.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA1.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA2.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA2.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA3.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA3.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA4.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA4.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA5.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA5.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA6.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA6.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA7.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA7.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA8.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA8.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA9.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA9.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA10.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA10.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA11.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA11.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA12.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA12.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA13.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA13.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA14.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA14.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA15.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA15.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA16.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA16.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA17.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA17.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA18.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA18.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA19.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA19.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA20.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA20.jpg" alt="" width="600" height="400">
             </div>
             <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA21.jpg" alt="fallen soldier" width="600" height="400">
+                <img id="myImg" src="./assets/images/RLFA22/RLFA21.jpg" alt="" width="600" height="400">
+            </div>
+        </div>
+    </section>
+    <section class="photo-title">
+        <h3>Fish & Wildlife Management 2022</h3>
+    </section>
+    <section class="main">
+        <div class="gallery">
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM1.JPG" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM2.JPG" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM3.JPG" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM4.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM5.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM6.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM7.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM8.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM9.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM10.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM11.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM12.jpg" alt="" width="600" height="400">
+            </div>
+            <div class="gallery-item">
+                <img id="myImg" src="./assets/images/F&WM22/F&WM13.jpg" alt="" width="600" height="400">
             </div>
         </div>
     </section>
