--- a/photos.html
+++ b/photos.html
@@ -4,38 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/photos-style.css">
     <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" 
     crossorigin="anonymous"></script>
     <title>Photos</title>
 </head>
 <body>
-    <header>
-        <h1>
-            <a href="./index.html">Troop 586</a>
-        </h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="https://troop586.com/index/#calendar">Calendar</a>
-                </li>
-                <li>
-                    <a href="documents.html">Documents</a>
-                </li>
-                <li>
-                    <a href="photos.html">Photos</a>
-                </li>
-                <li>
-                    <a href="https://troop586.com/index/#contact-us">Contact Us</a>
-                </li>
-                <li>
-                    <a href="troop-roster.html">Troop Roster</a>
-                </li>
-                <li>
-                    <a href="mum-festival.html">Mum Festival</a>
-                </li>
-            </ul>
-        </nav>
+    <header>            
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="./index.html">Home</a>
+            <a href="resources.html">Resources</a>               
+            <a href="photos.html">Photos</a>                
+            <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
+            <a href="troop-roster.html">Troop Roster</a>
+            <a href="mum-festival.html">Mum Fest</a>
+        </div>
+        <div id="main">
+            <span onclick="openNav()">&#9776;</span>
+        </div>
+        <div class="header">
+            <h1>Troop 586</h1>
+            <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
+        </div>
     </header>
     <section class="title">
         <h2 class="section-title">Photos</h2>
@@ -190,6 +182,7 @@
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
-    <script src="./assets/js/photos.js"></script>
+    <script src="./assets/js/photos-modal.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
