--- a/resources.html
+++ b/resources.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/mum-festival-style.css">
-    <title>Mum Festival</title>
+    <link rel="stylesheet" href="./assets/css/documents-style.css">
+    <title>Documents</title>
 </head>
 <body>
     <header>            
@@ -28,7 +28,7 @@
         </div>
     </header>
     <section class="title">
-        <h2 class="section-title">Mum Festival</h2>
+        <h2 class="section-title">Resources</h2>
     </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
