menu fix and new screenshots

--- a/photos.html
+++ b/photos.html
@@ -20,6 +20,10 @@
             <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
             <a href="troop-roster.html">Troop Roster</a>
             <a href="mum-festival.html">Mum Fest</a>
+            <a href="#">Eagle Scouts</a>
+            <a href="#">Packing Lists</a>
+            <a href="#">Scoutmaster Minutes</a>
+            <a href="#">Troop Forms</a>
         </div>
         <div id="main">
             <span onclick="openNav()">&#9776;</span>
