links and history of soup

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             </div>
             <div class="header">
                 <h1>Troop 586</h1>
-                <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
+                <a href="./history-of-soup.html" title="History Of Soup">
+                    <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
+                </a>
             </div>
         </header>
         <section class="hero">
             <div class="hero-image">
-                <img src="./assets/images/placeholder-600x300.png" alt="placeholder" width="600" height="300">
+                <h2>New Troop Logo Coming Soon...</h2>
             </div>
             <div class="hero-cta">
                 <h2>Start Building Your<br>
@@ -47,9 +49,12 @@
                 </p>
             </div>
             <div class="links">
-                <img src="./assets/images/200x100.png" alt="">
-                <img src="./assets/images/200x100.png" alt="">
-                <img src="./assets/images/200x100.png" alt="">
+                <a href="https://www.scouting.org/programs/scouts-bsa/advancement-and-awards/merit-badges/" title="Merit Badges">
+                    <img src="./assets/images/merit-badge-banner.jpg" alt="">
+                </a>
+                <a href="https://scoutbook.scouting.org/" title="Scoutbook">
+                    <img src="./assets/images/Scoutbook-Banner.png" alt="">
+                </a>
             </div>
         </section>
         <section id="contact-us" class="contact">
