--- a/mum-festival.html
+++ b/mum-festival.html
@@ -28,7 +28,9 @@
         </div>
         <div class="header">
             <h1>Troop 586</h1>
-            <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
+            <a href="./history-of-soup.html" title="History Of Soup">
+                <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
+            </a>
         </div>
     </header>
     <section class="title">
