--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -30,7 +30,7 @@
             <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
     </div>
   </header> 
-  <div class="container">
+  <div class="history">
     <div class="soup">
       <h2>History Of Soup the Turtle Coming Soon...</h2>
     </div>
