photos by category and new font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Troop 586 Homepage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
