--- a/photos.html
+++ b/photos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/photos-style.css">
     <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" 
@@ -37,157 +38,17 @@
     </header>
     <section class="title">
         <h2 class="section-title">Photos</h2>
-    </section>
-    <section class="photo-title">
-        <h3>Winter Bushwhack 2022</h3>
-    </section>
-    <section class="main">
-        <div class="gallery">
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB22/WB2.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB22/WB1.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB22/WB3.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB22/WB4.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB22/WB5.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB22/WB6.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB22/WB7.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/WB22/falls.jpg" alt="" width="600" height="400">
-            </div>
-        </div>
-    </section>
-    <section class="photo-title">
-        <h3>Real Life First Aid 2022</h3>
+        <span onclick="renderPhotos(wb22)">WB2022</span>
+        <span onclick="renderPhotos(rlfa22)">RLFA2022</span>
+        <span onclick="renderPhotos(fwlm22)">F&WLM2022</span>
     </section>
     <section class="main">
-        <div class="gallery">
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA1.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA2.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA3.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA4.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA5.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA6.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA7.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA8.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA9.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA10.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA11.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA12.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA13.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA14.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA15.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA16.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA17.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA18.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA19.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA20.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/RLFA22/RLFA21.jpg" alt="" width="600" height="400">
-            </div>
-        </div>
-    </section>
-    <section class="photo-title">
-        <h3>Fish & Wildlife Management 2022</h3>
-    </section>
-    <section class="main">
-        <div class="gallery">
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM1.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM2.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM3.JPG" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM4.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM5.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM6.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM7.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM8.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM9.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM10.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM11.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM12.jpg" alt="" width="600" height="400">
-            </div>
-            <div class="gallery-item">
-                <img id="myImg" src="./assets/images/F&WM22/F&WM13.jpg" alt="" width="600" height="400">
-            </div>
-        </div>
+        <div class="gallery" id="gallery"></div>       
     </section>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
+    <script src="./assets/js/photos.js"></script>
     <script src="./assets/js/photos-modal.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
