--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>History Of Soup</title>
 </head>
@@ -30,7 +31,7 @@
             <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
     </div>
   </header> 
-  <div class="container">
+  <div class="history">
     <div class="soup">
       <h2>History Of Soup the Turtle Coming Soon...</h2>
     </div>
