adjustments to html

--- a/mum-festival.html
+++ b/mum-festival.html
@@ -23,6 +23,7 @@
             <a href="#">Packing Lists</a>
             <a href="#">Scoutmaster Minutes</a>
             <a href="#">Troop Forms</a>
+            <a href="#">Events</a>
         </div>
         <div id="main">
             <span onclick="openNav()">&#9776;</span>
