--- a/photos.html
+++ b/photos.html
@@ -25,6 +25,7 @@
             <a href="#">Packing Lists</a>
             <a href="#">Scoutmaster Minutes</a>
             <a href="#">Troop Forms</a>
+            <a href="#">Events</a>
         </div>
         <div id="main">
             <span onclick="openNav()">&#9776;</span>
@@ -51,7 +52,6 @@
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
     <script src="./assets/js/photos.js"></script>
-    <!-- <script src="./assets/js/photos-modal.js"></script> -->
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
