--- a/troop-roster.html
+++ b/troop-roster.html
@@ -23,6 +23,7 @@
             <a href="#">Packing Lists</a>
             <a href="#">Scoutmaster Minutes</a>
             <a href="#">Troop Forms</a>
+            <a href="#">Events</a>
         </div>
         <div id="main">
             <span onclick="openNav()">&#9776;</span>
@@ -36,302 +37,23 @@
     </header>
     <section class="title">
         <h2 class="section-title">Troop Roster</h2>
+        <div class="category">
+            <span onclick="createCards(key3)">Key 3</span>
+            <span onclick="createCards(seniorPatrol)">SPL & ASPL</span>
+            <span onclick="createCards(pheonix)">Pheonix Patrol</span>
+            <span onclick="createCards(banananadana)">Banananadana's Patrol</span>
+            <span onclick="createCards(infernos)">Infernos Patrol</span>
+            <span onclick="createCards(wetBandits)">Wet Bandits Patrol</span>
+            <span onclick="createCards(underdogs)">Underdogs Patrol</span>
+            <span onclick="createCards(scoutMasters)">Assistant Scoutmasters</span>
+            <span onclick="createCards(committee)">Committee Members</span>
+        </div>
     </section>
-    <div class="container">
-        <section class="cards-title">
-            <h3>Key 3</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/scoutmaster.JPG" alt="">
-                <h4>Jim<br>Ridgeway</h4>
-                <p><b>Position:</b><br>SM</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee-chair.JPG" alt="">
-                <h4>Jon<br>Sears</h4>
-                <p><b>Position:</b><br>Chair</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/charter-rep.JPG" alt="">
-                <h4>Cameron<br>Haller</h4>
-                <p><b>Position:</b><br>COR</p>
-            </article>
-        </section>
-    </div>
-    <div class="container">
-        <section class="cards-title">
-            <h3>SPL and ASPL</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/SPL.JPG" alt="">
-                <h4>Brighton S.</h4>
-                <p><b>Position:</b><br>SPL</p>
-                <p><b>Current Rank:</b><br>Tenderfoot</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/ASPL.JPG" alt="">
-                <h4>Trevor H.</h4>
-                <p><b>Position:</b><br>ASPL</p>
-                <p><b>Current Rank:</b><br>First Class</p>
-            </article>
-        </section>
-        </section>
-    </div>
-    <div class="container">
-        <section class="cards-title">
-            <h3>Phoenix Patrol</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/phoenix.JPG" alt="">
-                <h4>Dillen S.</h4>
-                <p><b>Position:</b><br><br></p>
-                <p><b>Current Rank:</b><br>Eagle Scout</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/phoenix.JPG" alt="">
-                <h4>Garrett P.</h4>
-                <p><b>Position:</b><br><br></p>
-                <p><b>Current Rank:</b><br>Eagle Scout</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/phoenix.JPG" alt="">
-                <h4>Leo H.</h4>
-                <p><b>Position:</b><br><br></p>
-                <p><b>Current Rank:</b><br>Eagle Scout</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/phoenix.JPG" alt="">
-                <h4>Logan D.</h4>
-                <p><b>Position:</b><br><br></p>
-                <p><b>Current Rank:</b><br>Life Scout</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/phoenix.JPG" alt="">
-                <h4>Mason H.</h4>
-                <p><b>Position:</b><br><br></p>
-                <p><b>Current Rank:</b><br>Eagle Scout</p>
-            </article>
-        </section>
-    </div>
-    <div class="container">
-        <section class="cards-title">
-            <h3>The Banananadana's Patrol</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/bananas.JPG" alt="">
-                <h4>Christian H.</h4>
-                <p><b>Position:</b><br><br></p>
-                <p><b>Current Rank:</b><br>Star Scout</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/bananas.JPG" alt="">
-                <h4>Gavyn M.</h4>
-                <p><b>Position:</b><br><br></p>
-                <p><b>Current Rank:</b><br>Life Scout</p>
-            </article>
-        </section>
-    </div>
-    <div class="container">
-        <section class="cards-title">
-            <h3>Infernos Patrol</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/infernos.png" alt="">
-                <h4>Brighton S.</h4>
-                <p><b>Position:</b><br>Librarian<br>Chaplain Aide</p>
-                <p><b>Current Rank:</b><br>Tenderfoot</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/infernos.png" alt="">
-                <h4>Gavin G.</h4>
-                <p><b>Position:</b><br>Assistant<br>Patrol Leader</p>
-                <p><b>Current Rank:</b><br>No Rank</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/infernos.png" alt="">
-                <h4>Jackson C.</h4>
-                <p><b>Position:</b><br>Patrol Leader</p>
-                <br>
-                <p><b>Current Rank:</b><br>Tenderfoot</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/infernos.png" alt="">
-                <h4>Trevor H.</h4>
-                <p><b>Position:</b><br><br></p>
-                <br>
-                <p><b>Current Rank:</b><br>First Class</p>
-            </article>
-        </section>
-    </div>
-    <div class="container">
-        <section class="cards-title">
-            <h3>Wet Bandits Patrol</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/wet-bandits.JPG" alt="">
-                <h4>Caleb L.</h4>
-                <p><b>Position:</b><br>Patrol Leader</p>
-                <br>
-                <p><b>Current Rank:</b><br>Scout</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/wet-bandits.JPG" alt="">
-                <h4>Cayll L.</h4>
-                <p><b>Position:</b><br><br></p>
-                <br>
-                <p><b>Current Rank:</b><br>No Rank</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/wet-bandits.JPG" alt="">
-                <h4>Logan G.</h4>
-                <p><b>Position:</b><br><br></p>
-                <br>
-                <p><b>Current Rank:</b><br>Scout</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/wet-bandits.JPG" alt="">
-                <h4>Isaac L.</h4>
-                <p><b>Position:</b><br>Assistant<br>Patrol Leader</p>
-                <p><b>Current Rank:</b><br>Tenderfoot</p>
-            </article>
-        </section>
-    </div>
-    <div class="container">
-        <section class="cards-title">
-            <h3>New Scout Patrol</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/to-be-named.JPG" alt="">
-                <h4>Christopher L.</h4>
-                <p><b>Position:</b><br>Assistant<br>Patrol Leader</p>
-                <p><b>Current Rank:</b><br>No Rank</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/to-be-named.JPG" alt="">
-                <h4>Graysen M</h4>
-                <p><b>Position:</b><br>Scribe</p>
-                <br>
-                <p><b>Current Rank:</b><br>No Rank</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/to-be-named.JPG" alt="">
-                <h4>Jeremy F.</h4>
-                <p><b>Position:</b><br>Historian</p>
-                <br>
-                <p><b>Current Rank:</b><br>No Rank</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/to-be-named.JPG" alt="">
-                <h4>Maximilian M.</h4>
-                <p><b>Position:</b><br>Patrol Leader</p>
-                <br>
-                <p><b>Current Rank:</b><br>No Rank</p>
-            </article>
-        </section>
-    </div>
-    <div class="container">
-        <section class="cards-title">
-            <h3>Assistant Scoutmasters</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
-                <h4>Blake<br>Dysinger</h4>
-                <p><b>Position:</b><br>ASM</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
-                <h4>Glen<br>Luersman</h4>
-                <p><b>Position:</b><br>ASM</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
-                <h4>Matt<br>Hollon</h4>
-                <p><b>Position:</b><br>ASM</p>
-            </article><article class="card">
-                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
-                <h4>Noah<br>Barnes</h4>
-                <p><b>Position:</b><br>ASM</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/assist-scoutmaster.JPG" alt="">
-                <h4>Tom<br>Dysinger</h4>
-                <p><b>Position:</b><br>ASM</p>
-            </article>
-        </section>
-    </div>
-    <div class="container">
-        <section class="cards-title">
-            <h3>Committee Members</h3>
-        </section>
-        <section class="cards">
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Dennis<br>Mullins</h4>
-                <p><b>Position:</b><br>Treasurer</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Melinda<br>Luersman</h4>
-                <p><b>Position:</b><br>Activities<br>Coordinator</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Cid<br>Ridgeway</h4>
-                <p><b>Position:</b><br><br></p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Robert<br>Lesher</h4>
-                <p><b>Position:</b><br>Fundraising</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Andrew<br>Luersman</h4>
-                <p><b>Position:</b><br>Membership<br>Coordinator</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Angel<br>Grubbs</h4>
-                <p><b>Position:</b><br>Secretary</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Ceana<br>Hollon</h4>
-                <p><b>Position:</b><br><br></p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Brittany<br>Cheadle</h4>
-                <p><b>Position:</b><br>Fundraising</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Jon<br>Sears</h4>
-                <p><b>Position:</b><br>Chaplain</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Matt<br>Hollon</h4>
-                <p><b>Position:</b><br>Equipment<br>Coordinator</p>
-            </article>
-            <article class="card">
-                <img src="./assets/images/committee.JPG" alt="">
-                <h4>Glen<br>Luersman</h4>
-                <p><b>Position:</b><br>Webmaster</p>
-            </article>
-        </section>
-    </div>
+    <div class="cards"></div>
     <footer>
         <h2>&copy; Glen Luersman 2022</h2>
     </footer>
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/troop-roster.js"></script>
 </body>
 </html>
