--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -22,6 +22,7 @@
         <a href="#">Packing Lists</a>
         <a href="#">Scoutmaster Minutes</a>
         <a href="#">Troop Forms</a>
+        <a href="#">Events</a>
     </div>
     <div id="main">
         <span onclick="openNav()">&#9776;</span>
