--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Troop 586 Homepage</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="v
+        iewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
@@ -12,17 +13,10 @@
         <header>            
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="./index.html">Home</a>
-                <a href="resources.html">Resources</a>               
+                <a href="./index.html">Home</a>               
                 <a href="photos.html">Photos</a>                
                 <a href="#contact-us">Contact Us</a>           
                 <a href="troop-roster.html">Troop Roster</a>
-                <a href="mum-festival.html">Mum Fest</a>
-                <a href="#">Eagle Scouts</a>
-                <a href="#">Packing Lists</a>
-                <a href="#">Scoutmaster Minutes</a>
-                <a href="#">Troop Forms</a>
-                <a href="#">Events</a>
             </div>
             <div id="main">
                 <span onclick="openNav()">&#9776;</span>
@@ -56,6 +50,9 @@
                 </a>
                 <a href="https://scoutbook.scouting.org/" title="Scoutbook">
                     <img src="./assets/images/Scoutbook-Banner.png" alt="">
+                </a>
+                <a href="https://www.animatedknots.com/" title="Animated Knots">
+                    <img src="./assets/images/grog-knots-title.jpg" alt="">
                 </a>
             </div>
         </section>
