--- a/resources.html
+++ b/resources.html
@@ -7,23 +7,16 @@
     <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/documents-style.css">
-    <title>Documents</title>
+    <title>Resources</title>
 </head>
 <body>
     <header>            
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="./index.html">Home</a>
-            <a href="resources.html">Resources</a>               
-            <a href="photos.html">Photos</a>                
-            <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
-            <a href="troop-roster.html">Troop Roster</a>
-            <a href="mum-festival.html">Mum Fest</a>
-            <a href="#">Eagle Scouts</a>
-            <a href="#">Packing Lists</a>
-            <a href="#">Scoutmaster Minutes</a>
-            <a href="#">Troop Forms</a>
-            <a href="#">Events</a>
+        <a href="./index.html">Home</a>          
+        <a href="photos.html">Photos</a>                
+        <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
+        <a href="troop-roster.html">Troop Roster</a>
         </div>
         <div id="main">
             <span onclick="openNav()">&#9776;</span>
